# Ollama-MCPServer-python

./: .gitignore  README.md  pyproject.toml
api/: main.py  mcp_client.py
api/MCP/: client.py  server.py
api/utils/: config.py
frontend/: app.py  chatbot.py  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatMessage.tsx  ToolExecutionBlock.tsx
frontend/utils/: logger.py
