[project]
name = "mcp-client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.88.0",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.12.1",
    "fastapi>=0.135.3",
    "langchain-community>=0.4.1",
    "mcp[cli]>=1.27.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
]
